--- a/README.asciidoc
+++ b/README.asciidoc
@@ -113,7 +113,7 @@ Where can I get the source for hangwatch?::
 You can use `git` to clone the hangwatch repo on github:
 +
 ----
-git clone git@github.com:jumanjiman/hangwatch.git
+git clone https://github.com/jumanjiman/hangwatch.git
 ----
 +
 You can also download one version of the source from 
